--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -1,8 +1,18 @@
-d cycle deband
+# Turn on/off debanding. If you don't want to use the script
+#d cycle deband
 
+# Subtitle delay
 Shift+RIGHT add sub-delay -0.1
 Shift+LEFT add sub-delay +0.1
 
-b add audio-delay +0.1
-n add audio-delay -0.1
+# Audio delay
+B add audio-delay +0.1
+b add audio-delay -0.1
+
+# Removes current playlist
+p playlist-clear
+# P to reload the playlist
+
+# Opening console
+ctrl+T script-message-to console type ""
 
