--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,63 +1,79 @@
-#====================================General===============================
+#===================================General==============================
 
-#Don't close the player after finishing the video
+# Don't close the player after finishing the video
 keep-open=yes
 
-#Cursor hide in ms
-cursor-autohide=90
+# Resumes playback when skip to next file
+reset-on-next-file=pause
 
-#Set player max vol to 100%
+# Set player max vol to 100%
 volume-max=100
 
-#Default volume of the player
+# Default volume of the player
 volume=100
+
+# Prevent the window from being larger than the screen
+autofit-larger=50%
+
+# Allows the window to resize freely
+keepaspect-window=no
 
 
 #----Rendering-Quality----
 
-#Best quality
+# Best quality
 profile=gpu-hq
 
-#GPU renderer options
+# GPU renderer options
 vo=gpu-next
 
-#hwdecs hardware api vulkan
+# Hardware api vulkan hwdecs
 gpu-api=vulkan
 
 #Hardware decoding
 hwdec=nvdec-copy
 
 
-#---------GUI OSD---------
-#Disable the CSD
+#-----------GUI-----------
+
+# Custom OSC to be used
 osc=no
 
-#Don't show a huge volume box on screen when turning the volume up/down
+# Set the duration of the OSD messages in ms
+osd-duration=200
+
+# Don't show a huge volume box on screen when turning the volume up/down
 osd-bar=no
 
+# Cursor is always visible in windowed mode
+cursor-autohide-fs-only=yes 
 
-#---------Subs---------
+# Cursor hide in ms
+cursor-autohide=200
 
-#Load external subtitles with (almost) the same name as the video 
+
+#--------Subtitles--------
+
+# Load external subtitles with (almost) the same name as the video
 sub-auto=fuzzy
 
-#Forces showing subtitles while seeking through the video
+# Forces showing subtitles while seeking through the video
 demuxer-mkv-subtitle-preroll=yes
 
-#Backward compatibility for vsfilter
-sub-ass-vsfilter-blur-compat=no
+# Backward compatibility for vsfilter
+sub-ass-use-video-data=aspect-ratio
 
-#Fixes subtitle timing for gaps smaller than 210ms
+# Fixes subtitle timing for gaps smaller than 210ms
 sub-fix-timing=yes
 
-#Some settings fixing VOB/PGS subtitles (creating blur & changing yellow subs to gray)
+# Some settings fixing VOB/PGS subtitles (creating blur & changing yellow subs to gray)
 sub-gauss=1.0
 sub-gray=yes
 
-#adds the default styles from the provided file to the subtitle track
+# Adds the default styles from the provided file to the subtitle track
 sub-ass-override=yes
 
-#Hide subtitles by default
+# Hide subtitles by default
 sub-visibility=no
 
 
@@ -67,11 +83,16 @@ sub-visibility=no
 profile-desc=Modo de Musica
 profile-cond=path:match("/Music/") ~= nil
 
-#open mpv in fullscreen
+# Open mpv in fullscreen
 fullscreen=no
 
-#The last position of your video is saved when quitting mpv
+# The last position of your video is saved when quitting mpv
 save-position-on-quit=no
+
+# Metadata display
+osd-playing-msg-duration=100000
+osd-align-y=center
+osd-playing-msg=${metadata/title} \n${metadata/artist} \n${metadata/album_artist} \n${metadata/composer} \n${metadata/album} (${metadata/date}) \n${metadata/track}/${metadata/tracktotal}
 
 
 #====================================Video===============================
@@ -80,79 +101,59 @@ save-position-on-quit=no
 profile-desc=Modo de Video
 profile-cond=path:match("/Music/") == nil
 
-#Gamma correction for a PC screen | o usar: target-prim=dci-p3
+# Gamma correction for screen | target-prim=dci-p3
 icc-profile-auto
 
-#Displaying HDR as HDR content 
-target-colorspace-hint=yes
-
-#Max contrast ratio of your supported device
-target-contrast=auto 
-
-#HDR playback
-target-prim=bt.2020
-
-#If your TV still won't switch into HDR mode, try this
-target-trc=pq
-
-#open mpv in fullscreen
+# Open mpv in fullscreen
 fullscreen=yes
 
-#The last position of your video is saved when quitting mpv
+# The last position of your video is saved when quitting mpv
 save-position-on-quit=yes
 
-#Gamma correction for a PC screen (sRGB). Sets the output to sRGB with approximately 2.2 power law gamma
-target-trc=srgb
-gamma-factor=1.1
+#--------Debanding--------
 
-
-#---------Deband---------
-
-#Colour banding
+# Enable the debanding algorithm, which reduces the amount of visible banding
 deband=no
 
-#Deband steps (More = Better quality, but higher GPU cost)
-deband-iterations=4
+# High = better quality. But higher GPU cost. Falls off quickly (>4) is useless
+deband-iterations=2
 
-#Deband strength (More = Less banding, but more detail loss)
-deband-threshold=48
+# High = increase banding strength. But more detail loss
+deband-threshold=64
 
-#Deband range (More = Less banding, but higher GPU cost)
-deband-range=16
+# High = detects more gradients. Lower = smooth more aggressively
+deband-range=17
 
-#Dynamic Grain (More = More dynamic grain) | Set it to "0" in case you prefer the static grain shader
-deband-grain=0
-
-
-#---------Static Grain---------
-
-#Luma
-glsl-shader="~/.config/mpv/shaders/noise_static_luma.hook"
-
-#Chroma
-glsl-shader="~/.config/mpv/shaders/noise_static_chroma.hook"
+# Mask quantization artifacts. High = more noise
+deband-grain=12
 
 
-#---------Dither---------
+#--------Dithering--------
 
-#display bitdepth
+# Display bitdepth
 dither-depth=auto
 
-#Selects the dithering algorithm | Use "fruit" (8-Bit/8-Bit+FRC display) or "ordered" (true 10-Bit/12-Bit display)
-dither=fruit
+# Selects the dithering algorithm | "fruit" (8 bit), "ordered" (10/12 bit)
+dither=error-diffusion
 
-#kernel in case of error-diffusion "sierra-lite" is the fastest choice with decent results, alternatives are "floyd-steinberg" (slow), "atkinson" (slower) and "jarvis-judice-ninke" (slowest) 
-error-diffusion=sierra-lit
+# Error diffusion kernel
+error-diffusion=sierra-lite
 
 
-#---------Anti Ringing---------
+#----Ringing-Artifacts----
 
-#Luma upscale deringing (Higher = Less rining, but more detail loss)
-scale-antiring=0.7
+# Luma upscale deringing. High = less ringing. But more detail loss
+scale-antiring=0.8
 
-#Luma downscale deringing (Higher = Less rining, but more detail loss)
-dscale-antiring=0.7
+# Luma downscale deringing. High = less ringing. But more detail loss
+dscale-antiring=0.8
 
-#Chroma upscale deringing (Higher = Less rining, but more detail loss)
-cscale-antiring=0.7
+# Chroma upscale deringing. High = less ringing. But more detail loss
+cscale-antiring=0.8
+
+
+#---------Shaders---------
+
+glsl-shader="~/.config/mpv/shaders/nnedi3-nns128-win8x4.hook"
+
 
